# substreams-undo-test

./: Cargo.toml  Makefile  schema.graphql  subgraph.yaml  substreams.yaml
proto/: contract.proto
src/: lib.rs
src/pb/: contract.v1.rs
