[package]
name = "substreams-undo-test"
version = "0.0.1"
description = "Extraction of all Ethereum events for address bc4ca0eda7647a8ab7c2061c2e118a18a936f13d, see https://etherscan.io/address/bc4ca0eda7647a8ab7c2061c2e118a18a936f13d"
edition = "2021"
# repository = ADD REPOSITORY URL HERE
# license = "Apache 2.0"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
hex-literal = "0.3.4"
num-bigint = "0.4"
num-traits = "0.2.15"
prost = "0.11"
sha-1 = "0.10.0"
substreams = "0.5"
substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum" }
substreams-database-change = "1.1"
substreams-entity-change = "1.2"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = { git = "https://github.com/streamingfast/substreams-ethereum" }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
